SecurityPOC/force-app/main/default/objects/Location/fields/Armed_Guards_Required__c.field-meta.xml
<CustomField>
    <fullName>Armed_Guards_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Armed Guards Required?</label>
    <type>Checkbox</type>
</CustomField>