SecurityPOC/force-app/main/default/objects/Location/fields/Assigned_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Locations (Assigned Supervisor)</relationshipLabel>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>