SecurityPOC/force-app/main/default/objects/Location/fields/Emergency_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Procedures__c</fullName>
    <label>Emergency Procedures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>