SecurityPOC/force-app/main/default/objects/Location/fields/Equipement_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Equipement_on_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipement on Site?</label>
    <type>Checkbox</type>
</CustomField>