SecurityPOC/force-app/main/default/objects/Location/fields/Guards_Needed_3__c.field-meta.xml
<CustomField>
    <fullName>Guards_Needed_3__c</fullName>
    <label>Guards Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>