SecurityPOC/force-app/main/default/objects/Location/fields/Is_HQ__c.field-meta.xml
<CustomField>
    <fullName>Is_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is HQ?</label>
    <type>Checkbox</type>
</CustomField>