SecurityPOC/force-app/main/default/objects/Location/fields/Number_of_Guards_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guards_Assigned__c</fullName>
    <description>How many guards are assigned to this location</description>
    <label>Number of Guards Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>