SecurityPOC/force-app/main/default/objects/Location/fields/Patrol_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Patrol_Frequency__c</fullName>
    <label>Patrol Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Hour</fullName>
            </value>
            <value>
                <fullName>Every 2 Hours</fullName>
            </value>
            <value>
                <fullName>Every 3 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>