SecurityPOC/force-app/main/default/objects/Location/fields/Security_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>Security_Level_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Level Required?</label>
    <type>Checkbox</type>
</CustomField>