SecurityPOC/force-app/main/default/objects/Location/fields/Zone_1__c.field-meta.xml
<CustomField>
    <fullName>Zone_1__c</fullName>
    <description>describes zone location, ex: stage-front/stage-left/right or north-east/north-west/south-east/south-west sector</description>
    <label>Zone 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>