SecurityPOC/force-app/main/default/objects/Location/fields/Zone_2__c.field-meta.xml
<CustomField>
    <fullName>Zone_2__c</fullName>
    <label>Zone 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>