SecurityPOC/force-app/main/default/objects/Location/fields/Zone_3__c.field-meta.xml
<CustomField>
    <fullName>Zone_3__c</fullName>
    <label>Zone 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>